--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Convince Myself"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Laurent"
+name                     : "ch4302"
 description              : "An amazing website."
 url                      : "https://laurent.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -93,30 +93,27 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Junhyeok CHAE"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Convince Yourself."
+  location         : "Cheongju-si, Republic of Korea"
+  email            : "cjh4302@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:cjh4302@email.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      # url: "https://cptinside.blogspot.com"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/ch4302"
+      # url: "https://www.facebook.com/profile.php?id=100005752153664"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      # url: "https://www.instagram.com/__laurentt/"
 
 # Site Footer
 footer:
